Add txt in Abaut

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <div class="">
                 <h2>Sobre a Loja</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem corporis tempore ratione hic libero, labore harum. Iste autem voluptatibus excepturi sunt, sit omnis quisquam, voluptatem minus necessitatibus natus ratione voluptate.</p>
+                <p><strong>Cristiano_SzTi</strong>  ipsum dolor sit amet consectetur adipisicing elit. Exercitationem corporis tempore ratione hic libero, labore harum. Iste autem voluptatibus excepturi sunt, sit omnis quisquam, voluptatem minus necessitatibus natus ratione voluptate.</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam, qui! Quasi assumenda nisi delectus provident deserunt quidem ea voluptatem saepe aspernatur maiores. Dolorum ullam fugiat, tenetur cumque qui placeat id.</p>
                 <ul class="brands-list">
                     <li>
