realiz alteraçoes noknow

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
+
+
+
+
     <title>Game Shop - Sua loja de Games
 
     </title>
